Fixed zombie process destroy